# libanim

./: COPYING  README.md  configure.ac  release.nix
doc/: Makefile.am
src/: Makefile.am  libanim.pc.in
src/animpp/: Makefile.am  main.c  pp.c  pp.h
src/libanim/: Makefile.am  anim.c  anim.h  animationheader.c  animationheader.h
